point 2. implemented fully